doc/docs/1.11.x/reference/pachctl/pachctl_undeploy.md
## pachctl undeploy

Tear down a deployed Pachyderm cluster.

### Synopsis

Tear down a deployed Pachyderm cluster.

```
pachctl undeploy [flags]
```

### Options

```
  -a, --all                DEPRECATED: Use "--metadata" instead.
  -h, --help               help for undeploy
      --ide                Delete the Pachyderm IDE deployment if it exists.
      --metadata           
                           Delete persistent volumes where metadata is stored. If your persistent volumes
                           were dynamically provisioned (i.e. if you used the "--dynamic-etcd-nodes"
                           flag), the underlying volumes will be removed, making metadata such as repos,
                           commits, pipelines, and jobs unrecoverable. If your persistent volume was
                           manually provisioned (i.e. if you used the "--static-etcd-volume" flag), the
                           underlying volume will not be removed.
      --namespace string   Kubernetes namespace to undeploy Pachyderm from.
```

### Options inherited from parent commands

```
      --no-color   Turn off colors.
  -v, --verbose    Output verbose logs
```

### SEE ALSO

* [pachctl](pachctl.md)	 - 

###### Auto generated by spf13/cobra on 4-Nov-2020
